# simple-fat

./: .gitignore  Cargo.toml
src/: bpb.rs  device.rs  dir.rs  error.rs  lib.rs  raw.rs
src/bpb/: common.rs  fat32.rs
src/bpb/common/: buffer.rs
src/bpb/fat32/: buffer.rs
src/bpb/general/: buffer.rs
src/dir/: buffer.rs  data.rs  entry.rs  long.rs
src/dir/data/: dir.rs  file.rs
src/dir/entry/: base.rs  short.rs
src/dir/long/: buffer.rs
src/raw/: bpb.rs  dir.rs
src/raw/bpb/: fat32.rs  general.rs
src/raw/bpb/general/: buffer.rs
src/raw/dir/: long.rs  short.rs
src/raw/dir/long/: buffer.rs
src/raw/dir/short/: buffer.rs
tests/: progress.rs
