[package]
name = "simple-fat"
version = "0.1.0"
edition = "2021"


[dependencies]
auto-delegate = { git = "https://github.com/elm-register/auto-delegate", branch = "nightly" }
thiserror-no-std = "2.0.2"
num_enum = { version = "0.6.1", default-features = false }
spin = "0.9.8"


[dev-dependencies]
trybuild2 = "1.0.2"



[features]
default = ["alloc"]
alloc = []
